[package]
name = "course-helpers"
version = "0.3.2"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bon = { version = "3.3.2", features = ["implied-bounds"] }
ec-core = { version = "0.1.0-course.3", registry = "ec-course" }
ec-linear = { version = "0.1.0-course.3", registry = "ec-course" }
flume = "0.11.1"
miette = { version = "7.4.0", features = ["fancy"] }
rand = "0.9.0"
rayon = "1.10.0"
