[package]
name = "course-helpers"
version = "0.3.2"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bon = { version = "3.3.2", features = ["implied-bounds"] }
ec-core = { version = "0.1.0-course.3", registry = "ec-course" }
ec-linear = { version = "0.1.0-course.3", registry = "ec-course" }
flume = "0.11.1"
itertools = "0.14.0"
miette = { version = "7.4.0", features = ["fancy"] }
rand = "0.9.0"
rayon = "1.10.0"
thiserror = "2.0.11"
ordered-float = "4.6.0"
push = { version = "0.1.0-course.3", registry = "ec-course" }

[dev-dependencies]
clap = { version = "4.5.28", features = ["derive"] }
num-traits = "0.2.19"
